merge book to main